<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hashi Sushi</string>
    <string name="txt_user">E-mail:</string>
    <string name="txt_password">Senha:</string>
    <string name="btn_login">ENTRAR</string>
    <string name="btn_signUp">CADASTRAR</string>
    <string name="marcos_f_c_rangel">Marcos F C Rangel</string>
    <string name="txt_name">Hashi Sushi</string>
    <string name="hide_email">Informe seu e-mail</string>
    <string name="hint_password">Informe sua senha</string>
    <string name="promotions">PROMOCÕES</string>
    <string name="txt_search">Buscar prato:</string>
    <string name="txt_menu_sales">CARDAPIO</string>
    <string name="hint_seach_plate">Informe o prato para busca</string>
    <string name="txt_list_plate">Pratos e Bebidas</string>
    <string name="cadastro">Cadastro</string>
    <string name="full_name">Nome:</string>
    <string name="joao_da_silva">Informe seu nome</string>
    <string name="cpf">CPF:</string>
    <string name="bord_date">Nascimento:</string>
    <string name="_123_456_789_01">Informe seu CPF</string>
    <string name="_01_01_2019">Informe sua data de nasc.</string>
    <string name="endere_o">Endereço de entrega:</string>
    <string name="number">Número:</string>
    <string name="rua_aparecida">Informe seu endereço</string>
    <string name="_99">Informe seu número</string>
    <string name="neighborhood">Bairro:</string>
    <string name="reference">Ponto de referência</string>
    <string name="referencepoint">Informe seu ponto de referência</string>
    <string name="jardim_nova_alianca">Informe seu bairro</string>
    <string name="city">Cidade</string>
    <string name="vargem_grande_do_sul">Vargem Grande do Sul</string>
    <string name="cep">CEP:</string>
    <string name="state">Estado:</string>
    <string name="_13870_001">13870-001</string>
    <string name="sao_paulo">São Paulo</string>
    <string name="female">Feminino</string>
    <string name="male">Masculino</string>
    <string name="e_mail">E-mail:</string>
    <string name="your_email">Informe seu e-mail</string>
    <string name="whatsapp">Contato:</string>
    <string name="_19_99999_9999">Informe seu celular</string>
    <string name="finalizar">Finalizar</string>
    <string name="preencha_os_campos">Por favor preencha os campos solicitados</string>
    <string name="password">Informe sua senha</string>
    <string name="password_RETYPE">Repita sua senha</string>
    <string name="pass">Senha:</string>
    <string name="your_password">Informe o sua senha!</string>
    <string name="your_phone">Informe o seu celular!</string>
    <string name="your_email2">Informe o seu E-mail!</string>
    <string name="your_cpf">Informe o seu CPF!</string>
    <string name="your_name">Informe o seu nome!</string>
    <string name="registration_completed"> O seu cadastrado foi concluído com sucesso! :)</string>
    <string name="registration_error">Cadastrado não realizado houve algum erro! :s</string>
    <string name="login_load">Aguarde validação de login... </string>
    <string name="my_points">Meus Pontos</string>
    <string name="code">Código:</string>
    <string name="_2071">2071</string>
    <string name="client">Cliente:</string>
    <string name="points">Pontos:</string>
    <string name="_8">0</string>
    <string name="txt_open">ESTAMOS ATENDENDO</string>
    <string name="txt_close">NÃO ESTAMOS ATENDENDO</string>
    <string name="txt_order">Pedido</string>
    <string name="txt_orders">Itens do Pedido:</string>
    <string name="ridio_btn_Delivery">Entregar</string>
    <string name="radio_btn_withdraw">Retirar</string>
    <string name="txt_total">0</string>
    <string name="btn_final">Finalizar Pedido</string>
    <string name="txt_type_payment">Pagar com:</string>
    <string name="txt_change_to">Troco para:</string>
    <string name="hint_total">Total:</string>
    <string name="title_activity_act_cardap">Cardapio</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_act_cardapio">Cardapio</string>

    <string-array name="titles_tab">
        <item>ENTRADA</item>
        <item>PRATOS QUENTES</item>
        <item>PRATOS FRIOS</item>
        <item>TEMAKIS</item>
        <item>COMBO</item>
        <item>BEBIDAS</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_enter">ENTRADA</string>
    <string name="txt_plat_hot">PRATOS</string>
    <string name="txt_plat_ace">MONTE SEU PRATO</string>
    <string name="txt_portions">PORCOES</string>
    <string name="txt_temakis">TEMAKIS</string>
    <string name="txt_combo">COMBO</string>
    <string name="txt_driks">BEBIDAS E SUCOS</string>
    <string name="btn_rescue">Resgatar Pontos</string>
    <string name="txt_remember_password">Lembrar-me</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_pont">MEUS PONTOS</string>
    <string name="txt_regirter_prod">Cadastro de produto</string>
    <string name="txt_number_prod">Nº Produto</string>
    <string name="hint_name_prod">Informe o nome do produto</string>
    <string name="txt_name_prod">Nome do Produto:</string>
    <string name="txt_decrition">Descrição:</string>
    <string name="txt_price_prod">Valor R$:</string>
    <string name="txt_type">Selecione o tipo:</string>
    <string name="txt_Is_promotion">Está em promoção:</string>
    <string name="txt_url_img">URL imagem produto:</string>
    <string name="txt_splash">Fast Delivery</string>
    <string name="txt_splash_fone">19 9.8605-6578</string>
    <string name="vgs">Vargem Grande do Sul</string>
    <string name="SP">São Paulo</string>
    <string name="we_are_not_open">NÃO ESTAMOS ATENDENDO</string>
    <string name="we_are_open_now">ESTAMOS ATENDENDO</string>
    <string name="app_finished">Hashi Sushi Finalizado!</string>
    <string name="please_type_password">Por favor, preencha esse campo!</string>
    <string name="please_type_email">Por favor, preencha esse campo!</string>
    <string name="type_email_and_pass">Por favor, informe e-mail e senha para acessar ou cadastre-se.</string>
    <string name="user_not_loged">Usuário não esta Logado !</string>
    <string name="user_loged">Usuário Logado!</string>
    <string name="error_to_access">Falha ao acessar o app! =[</string>
    <string name="welcome">Bem vindo! =]</string>
    <string name="email_rememberd">Seu e-mail será lembrado!</string>
    <string name="email_not_rememberd">Seu e-mail não será lembrado!</string>
    <string name="pass_not_equals">As senhas devem ser idênticas</string>
    <string name="pass_not_equals2">As senhas não conferem :s</string>
    <string name="try_another_pass">Tente outra senha</string>
    <string name="wrong_pass">A senha deve conter no mínimo 6 caracteres :s</string>
    <string name="menu_entrada">Entrada</string>
    <string name="menu_edtcadastro">EDITAR CADASTRO</string>
    <string name="menu_cad_prod">CADASTRAR PRODUTO</string>
    <string name="txt_car_item">Carrinho:</string>
    <string name="txt_quant_item">Itens:</string>
    <string name="txt_qt">0</string>
    <string name="txt_total_order">R$:</string>
    <string name="menu_sattus">STATUS PEDIDOS</string>
    <string name="txt_previsap_entrega">40 min. Em média</string>
    <string name="txt_desconto">Desconto:</string>
    <string name="no_connection">Sem conexão com internet :(</string>
    <string name="offile_device">Dispositivo offline, para utilizar o aplicativo</string>
    <string name="check_your_connecntion">verifique sua conexão de internet e tente novamente. Obrigado!</string>
    <string name="sushu_address">Rua São Pedro</string>
    <string name="sushi_neigh">Centro</string>
    <string name="sushi_number">661</string>
    <string name="click_twice">Clique 2x nos campos para alterar o endereço de entrega!</string>
    <string name="you_dont_have_products">Você não tem itens no carrinho.</string>
    <string name="firs_add_products">Primeiro adicione itens para definir o endereço.</string>
    <string name="please_add_your_address">Por favor, informe o endereço completo para entrega.</string>
    <string name="there_are_no_items">Não há itens para finalizar o pedido! =x</string>
    <string name="please_wait">Carregando dados aguarde, por favor aguarde...</string>
    <string name="checkout1">A ser entregue em:</string>
    <string name="checkout2">A ser retirado em:</string>
    <string name="end_order">Finalizar Pedido</string>
    <string name="confirm_order">Deseja confirmar o pedido de:</string>
    <string name="confirm">Confirmar</string>
    <string name="try_when_we_are_open">Você poderá finalizar um pedido quando estivermos abertos! :)</string>
    <string name="not_confirmed">Pedido não confirmado!</string>
    <string name="remove_item">Remover item</string>
    <string name="are_you_removing">Você está removendo:</string>
    <string name="remove">Remover</string>
    <string name="item_removed">Item removido do seu carrinho! ;)</string>
    <string name="cancel">Cancelar</string>
    <string name="order_confirmed">Pedido Confirmado</string>
    <string name="confirmed">confirmado</string>
    <string name="txt_custo_entrega">Custo de entrega:</string>
    <string name="txt_addtional">ADICIONAIS</string>
    <string name="menu_add">ADICIONAIS</string>
</resources>

