<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSmoky"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".views.ActPoints">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/my_points"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@android:color/background_light"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/user_points_code"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2071"
            android:textColor="@android:color/background_light"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/client"
            android:textColor="@android:color/background_light"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/user_points_name"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marcos_f_c_rangel"
            android:textColor="@android:color/background_light"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_points_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textColor="@android:color/background_light"

            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textColor="@android:color/background_light"

            android:textSize="25sp" />

    </LinearLayout>

    <TextureView
        android:id="@+id/texture_view"
        android:layout_width="wrap_content"
        android:layout_height="414dp"
        android:layout_marginTop="15dp"
        android:outlineAmbientShadowColor="@color/colorVemelium"
        tools:ignore="UnusedAttribute" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/flotBntHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/texture_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:srcCompat="@drawable/ic_home_white_24dp" />

</LinearLayout>